==> ARMmbed/mbed-os/features/netsocket/emac-drivers/TARGET_NXP_EMAC/TARGET_LPC546XX/lpc546xx_emac.cpp <==
#include <ctype.h>
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include "cmsis_os.h"
#include "mbed_interface.h"
#include "mbed_assert.h"
#include "netsocket/nsapi_types.h"
#include "mbed_shared_queues.h"
#include "fsl_phy.h"
#include "lpc546xx_emac_config.h"
#include "lpc546xx_emac.h"
#define ENET_BuffSizeAlign(n) ENET_ALIGN(n, ENET_BUFF_ALIGNMENT)
#define ENET_ALIGN(x,align)   ((unsigned int)((x) + ((align)-1)) & (unsigned int)(~(unsigned int)((align)- 1)))
#define FLAG_TX  1
#define FLAG_RX  2
#define THREAD_PRIORITY (osPriorityNormal)
#define PHY_TASK_PERIOD_MS      200

void LPC546XX_EMAC::thread_function(void* pvParameters)
{
    struct LPC546XX_EMAC *lpc_enet = static_cast<LPC546XX_EMAC *>(pvParameters);

    for (;;) {
        uint32_t flags = osThreadFlagsWait(FLAG_RX | FLAG_TX, osFlagsWaitAny, osWaitForever);

        MBED_ASSERT(!(flags & osFlagsError));

        if (flags & FLAG_RX) {
            lpc_enet->packet_rx();
        }

        if (flags & FLAG_TX) {
            lpc_enet->packet_tx();
        }
    }
}

void LPC546XX_EMAC::packet_rx()
{
    enet_rx_bd_ring_t *rxBdRing = (enet_rx_bd_ring_t *)&g_handle.rxBdRing[0];
    enet_rx_bd_struct_t *bdPtr = rxBdRing->rxBdBase + rxBdRing->rxGenIdx;
    bool suspend = false;

    /* Suspend and command for rx. */
    if (ENET->DMA_CH[0].DMA_CHX_STAT & ENET_DMA_CH_DMA_CHX_STAT_RBU_MASK) {
        suspend = true;
    }

    while ((bdPtr->control & ENET_RXDESCRIP_WR_OWN_MASK) == 0) {
        input();
        /* rxGenIdx gets updated, gets the next receive buffer descriptor */
        bdPtr = rxBdRing->rxBdBase + rxBdRing->rxGenIdx;
    }

    /* Set command for rx when it is suspend. */
    if (suspend)
    {
        ENET->DMA_CH[0].DMA_CHX_RXDESC_TAIL_PTR = ENET->DMA_CH[0].DMA_CHX_RXDESC_TAIL_PTR;
    }
}

bool LPC546XX_EMAC::power_up()
{
    /* Initialize the hardware */
    if (!low_level_init_successful()) {
        return false;
    }

    /* Worker thread */
    thread = create_new_thread("LPC546XX_EMAC_thread", &LPC546XX_EMAC::thread_function, this, THREAD_STACKSIZE, THREAD_PRIORITY, &thread_cb);

    /* Trigger thread to deal with any RX packets that arrived before thread was started */
    rx_isr();

    /* PHY monitoring task */
    prev_state.connected = STATE_UNKNOWN;
    prev_state.speed = (phy_speed_t)STATE_UNKNOWN;
    prev_state.duplex = (phy_duplex_t)STATE_UNKNOWN;

    phy_task_handle = mbed::mbed_event_queue()->call_every(PHY_TASK_PERIOD_MS, mbed::callback(this, &LPC546XX_EMAC::phy_task));

    /* Allow the PHY task to detect the initial link state and set up the proper flags */
    osDelay(10);

    /* Active TX/RX. */
    ENET_StartRxTx(ENET, 1, 1);

    return true;
}

uint32_t LPC546XX_EMAC::get_mtu_size() const
{
    return LPC546XX_ETH_MTU_SIZE;
}

void LPC546XX_EMAC::get_ifname(char *name, uint8_t size) const
{
    memcpy(name, LPC546XX_ETH_IF_NAME, (size < sizeof(LPC546XX_ETH_IF_NAME)) ? size : sizeof(LPC546XX_ETH_IF_NAME));
}

uint8_t LPC546XX_EMAC::get_hwaddr_size() const
{
    return LPC546XX_HWADDR_SIZE;
}
